--- a/web1/src/app/po/fitter-invoice-detail/fitter-invoice-detail.component.html
+++ b/web1/src/app/po/fitter-invoice-detail/fitter-invoice-detail.component.html
@@ -89,6 +89,8 @@
                                             <thead class="text-center">
                                                 <tr class="text-center">
                                                     <th>Sno.</th>
+                                                    <th>Customer Name</th>
+                                                    <th>Customer MobileNo</th>
                                                     <th>Customer Invoice</th>
                                                     <th>Product Name</th>
                                                     <th>Lens Type</th>
@@ -101,6 +103,8 @@
                                             <tbody class="text-center">
                                                 <tr class="text-center" *ngFor="let item of dataList ; let i = index;">
                                                     <td>{{dataList.length - i}}</td>
+                                                    <td>{{item.CustomerName}}</td>
+                                                    <td>{{item.MobileNo1}}</td>
                                                     <td>{{item.CustomerInvoice}}</td>
                                                     <td>{{item.ProductName}}</td>
                                                     <td>{{item.LensType}}</td>
