--- a/web1/src/app/common/common.component.css
+++ b/web1/src/app/common/common.component.css
@@ -75,10 +75,9 @@
   box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.4);
 }
 /* on hover show dropdown */
-.dropdown:hover .drop-content, .dropdown2:hover .drop-content2 {
+/* .dropdown .drop-content, .dropdown2 .drop-content2 {
   display: block;
-
-}
+} */
 /* drondown links */
 .drop-content a {
   padding: 12px 10px;
@@ -101,6 +100,8 @@
 .dropBtn2 i {
   margin-left: 15px;
 }
+
+
 
 @media (max-width:700px) {
   .navbar .nav-btn{
