--- a/web1/src/app/inventory/inventory-summary/inventory-summary.component.html
+++ b/web1/src/app/inventory/inventory-summary/inventory-summary.component.html
@@ -13,10 +13,18 @@
                         <form #f="ngForm" autocomplete="off" #f0="ngForm" (ngSubmit)="getInventoryData()">
                             <div class="row">
                                 <div class="col-xl-2 col-lg-2 col-md-3 col-12 mb-0">
-                                    <mat-form-field class="example-full-width mb-0">
+                                    <mat-form-field class="example-full-width mb-0" *ngIf="user.UserGroup === 'CompanyAdmin'">
                                         <mat-label>Select Shop</mat-label>
                                         <mat-select name="shopID" [(ngModel)]="data.ShopID" multiple>
                                             <mat-option [value]=0>All</mat-option>
+                                            <mat-option [value]="s.ID" *ngFor="let s of shopList"> {{s.Name}} <span
+                                                    [style.color]="'blue'"
+                                                    *ngIf="s.AreaName !== 'null'">({{s.AreaName}})</span> </mat-option>
+                                        </mat-select>
+                                    </mat-form-field>
+                                    <mat-form-field class="example-full-width mb-0" *ngIf="user.UserGroup !== 'CompanyAdmin'">
+                                        <mat-label>Select Shop</mat-label>
+                                        <mat-select name="shopID" [(ngModel)]="data.ShopID" >
                                             <mat-option [value]="s.ID" *ngFor="let s of shopList"> {{s.Name}} <span
                                                     [style.color]="'blue'"
                                                     *ngIf="s.AreaName !== 'null'">({{s.AreaName}})</span> </mat-option>
