--- a/web1/src/app/report/transfer-product-report/transfer-product-report.component.html
+++ b/web1/src/app/report/transfer-product-report/transfer-product-report.component.html
@@ -28,10 +28,19 @@
                                         </mat-form-field>
                                     </div>
                                     <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0">
-                                        <mat-form-field class="example-full-width mb-0">
+                                        <mat-form-field class="example-full-width mb-0" *ngIf="user.UserGroup === 'CompanyAdmin'">
                                             <mat-label>From Shop</mat-label>
                                             <mat-select name="FromShop" [(ngModel)]="data.FromShop" multiple>
                                                 <mat-option [value]=0>All</mat-option>
+                                                <mat-option [value]="Fs.ID" *ngFor="let Fs of shopList"> {{Fs.Name}}
+                                                    <span [style.color]="'blue'"
+                                                        *ngIf="Fs.AreaName !== 'null'">({{Fs.AreaName}})</span>
+                                                </mat-option>
+                                            </mat-select>
+                                        </mat-form-field>
+                                        <mat-form-field class="example-full-width mb-0 paddingInp" *ngIf="user.UserGroup !== 'CompanyAdmin'">
+                                            <mat-label>From Shop</mat-label>
+                                            <mat-select name="FromShop" [(ngModel)]="data.FromShop" disabled>
                                                 <mat-option [value]="Fs.ID" *ngFor="let Fs of shopList"> {{Fs.Name}}
                                                     <span [style.color]="'blue'"
                                                         *ngIf="Fs.AreaName !== 'null'">({{Fs.AreaName}})</span>
