--- a/web1/src/app/report/vendor-credit/vendor-credit.component.html
+++ b/web1/src/app/report/vendor-credit/vendor-credit.component.html
@@ -29,10 +29,19 @@
                                         </mat-form-field>
                                     </div>
                                     <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0">
-                                        <mat-form-field class="example-full-width mb-0">
+                                        <mat-form-field class="example-full-width mb-0" *ngIf="user.UserGroup === 'CompanyAdmin'">
                                             <mat-label>Shop Name</mat-label>
                                             <mat-select name="ShopID" [(ngModel)]="data.ShopID" multiple>
                                                 <mat-option [value]=0>All</mat-option>
+                                                <mat-option [value]="Fs.ID" *ngFor="let Fs of shopList"> {{Fs.Name}}
+                                                    <span [style.color]="'blue'"
+                                                        *ngIf="Fs.AreaName !== 'null'">({{Fs.AreaName}})</span>
+                                                </mat-option>
+                                            </mat-select>
+                                        </mat-form-field>
+                                        <mat-form-field class="example-full-width mb-0" *ngIf="user.UserGroup !== 'CompanyAdmin'">
+                                            <mat-label>Shop Name</mat-label>
+                                            <mat-select name="ShopID" [(ngModel)]="data.ShopID">
                                                 <mat-option [value]="Fs.ID" *ngFor="let Fs of shopList"> {{Fs.Name}}
                                                     <span [style.color]="'blue'"
                                                         *ngIf="Fs.AreaName !== 'null'">({{Fs.AreaName}})</span>
@@ -102,7 +111,7 @@
                                                 <th>Remark</th>
                                                 <th>Return</th>
                                             </tr>
-                                            <tr class="totolRow" *ngIf="this.dataList != null && this.dataList != ''" >
+                                            <tr class="totolRow " *ngIf="this.dataList != null && this.dataList != ''" >
                                                 <td>
                                                     <i class="fa fa-file-excel-o excel" title="ExportAsXLSX"
                                                         aria-hidden="true" type="button" (click)="exportAsXLSX()"> </i>
@@ -112,9 +121,9 @@
                                                 <td></td>
                                                 <td></td>
                                                 <td></td>
-                                                <td></td>
-                                                <td></td>
-                                                <td></td>
+                                                <td>{{this.totalAmount}}</td>
+                                                <td>{{this.totalPaidAmount}}</td>
+                                                <td>{{this.totalBalance}}</td>
                                                 <td></td>
                                                 <td></td>
                                                 <td></td>
